force-app/main/default/objects/Resellers_Ticket__c/Resellers_Ticket__c.object-meta.xml
<CustomObject>
    <label>Resellers Request</label>
    <nameField>
        <displayFormat>RR - {00000}</displayFormat>
        <label>Reseller Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resellers Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>