force-app/main/default/objects/Resellers_Ticket__c/fields/Chanel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Chanel_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resellers_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>