force-app/main/default/objects/Resellers_Ticket__c/fields/Solved_Date__c.field-meta.xml
<CustomField>
    <fullName>Solved_Date__c</fullName>
    <label>Solved Date</label>
    <type>DateTime</type>
</CustomField>