force-app/main/default/objects/Resellers_Ticket__c/listViews/All_Requests.listView-meta.xml
<ListView>
    <fullName>All_Requests</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Chanel_Manager__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Assigned_To__c</columns>
    <columns>Solved_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Requests</label>
</ListView>